# FastConformation

./: .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  TMscore.cpp  fast_ensemble.sh  gui.py  install.sh  install_cli.sh  install_colabbatch_linux.sh  install_decaf.sh  prepare_env.sh  prova_install.sh  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setup_docs.sh  tempCodeRunnerFile.python  tm_align_install.sh
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
_build/doctrees/: CODE_OF_CONDUCT.doctree  README.doctree
_build/doctrees/docs/: README.doctree  index.doctree  usage.doctree
abl_wt/analysis/mobile_detection/: abl_wt_rmsf_peak_calling_results.csv
decaf_e_dev/: TwodRMSD.py  __init__.py  analysis_config.py  analyze_ensemble_main.py  build_msa.py  config.json  decaf_init.py  detect_range_main.py  dock_widget.py  generate_msa.py  get_msa_jackhmmer.py  get_msa_mmseqs.py  gui.py  icons.py  jackhmmer_msa.py  make_predictions.py  mmseqs2_msa.py  pca_clustering.py  predict_ensemble.py  predict_ensemble_main.py  rmsd_analysis.py  rmsd_mode1d.py  rmsd_mode2d.py  rmsf_analysis.py  rmsf_plddt.py  run_gui.py  save_traj.py  src.fasta  test_jackhammer.a3m  test_seqs.fasta  tmscore_mode1d.py  tmscore_mode2d.py  utils.py
decaf_e_dev/ensemble_analysis/: analysis_utils.py  analyze_predictions.py  mdanalysis_utils.py  pca.py  rmsd.py  rmsf.py  tmscore.py  traj.py  twodrmsd.py  twotmscore.py
decaf_e_dev/example_configs/: config.json
decaf_e_dev/gui/: analysis_config.py  bb.py  build_msa.py  directory_selector.py  dock_widget.py  icons.py  job_manager.py  make_predictions.py  plot_widget.py  plot_window.py  prova.py  run_gui.py  widget_base.py
decaf_e_dev/msa_generation/: colabfold.py  get_msa.py  get_msa_jackhmmer.py  jackhmmer.py  msa_utils.py  utils.py
decaf_e_dev/sample_predictions/abl_wt_128_256/: abl_scores_rank_003_alphafold2_ptm_model_4_seed_000.json  abl_scores_rank_008_alphafold2_ptm_model_4_seed_022.json  abl_scores_rank_009_alphafold2_ptm_model_4_seed_020.json  abl_scores_rank_014_alphafold2_ptm_model_4_seed_017.json  abl_scores_rank_016_alphafold2_ptm_model_4_seed_015.json  abl_scores_rank_018_alphafold2_ptm_model_4_seed_013.json  abl_scores_rank_020_alphafold2_ptm_model_3_seed_006.json  abl_scores_rank_021_alphafold2_ptm_model_4_seed_019.json  abl_scores_rank_022_alphafold2_ptm_model_4_seed_014.json  abl_scores_rank_026_alphafold2_ptm_model_3_seed_020.json  abl_scores_rank_031_alphafold2_ptm_model_2_seed_029.json  abl_scores_rank_033_alphafold2_ptm_model_2_seed_004.json  abl_scores_rank_037_alphafold2_ptm_model_3_seed_021.json  abl_scores_rank_041_alphafold2_ptm_model_3_seed_013.json  abl_scores_rank_042_alphafold2_ptm_model_2_seed_011.json  abl_scores_rank_048_alphafold2_ptm_model_2_seed_003.json  abl_scores_rank_049_alphafold2_ptm_model_1_seed_006.json  abl_scores_rank_050_alphafold2_ptm_model_2_seed_002.json  abl_scores_rank_053_alphafold2_ptm_model_3_seed_000.json  abl_scores_rank_056_alphafold2_ptm_model_3_seed_014.json  abl_scores_rank_058_alphafold2_ptm_model_1_seed_000.json  abl_scores_rank_060_alphafold2_ptm_model_1_seed_002.json  abl_scores_rank_063_alphafold2_ptm_model_2_seed_026.json  abl_scores_rank_069_alphafold2_ptm_model_5_seed_011.json  abl_scores_rank_070_alphafold2_ptm_model_2_seed_027.json  abl_scores_rank_071_alphafold2_ptm_model_2_seed_023.json  abl_scores_rank_076_alphafold2_ptm_model_3_seed_005.json  abl_scores_rank_079_alphafold2_ptm_model_2_seed_005.json  abl_scores_rank_080_alphafold2_ptm_model_4_seed_009.json  abl_scores_rank_081_alphafold2_ptm_model_5_seed_009.json  abl_scores_rank_083_alphafold2_ptm_model_2_seed_012.json  abl_scores_rank_084_alphafold2_ptm_model_4_seed_010.json  abl_scores_rank_089_alphafold2_ptm_model_5_seed_002.json  (+22 more)
decaf_e_dev/tests/: test_decaf_e_dev.py
devtools/: README.md
docs/: Analysis_Usage.rst  Installation.rst  Makefile  Predictions_Usage.rst  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.txt  requirements.yaml  usage.rst  user_guide.rst
docs/api/: fast_conformation.ensemble_analysis.rst  fast_conformation.gui.rst  fast_conformation.msa_generation.rst  fast_conformation.rst  fast_ensemble.ensemble_analysis.rst  fast_ensemble.gui.rst  fast_ensemble.msa_generation.rst  fast_ensemble.rst  modules.rst
docs/cli_scripts/: Analysis_Usage.rst  MSA_Usage.rst  Predictions_Usage.rst  index.rst
example_configs/: config.json
fast_conformation/: jackhmmer_msa.py  mmseqs2_msa.py  pca_clustering.py  predict_ensemble.py  rmsd_mode1d.py  rmsd_mode2d.py  rmsf_plddt.py  save_traj.py  tmscore_mode1d.py  tmscore_mode2d.py
fast_conformation/ensemble_analysis/: pca.py  rmsd.py  tmscore.py  traj.py  twodrmsd.py  twotmscore.py
fast_conformation/gui/: analysis_config.py  build_msa.py  dock_widget.py  make_predictions.py  run_gui.py
fast_conformation/msa_generation/: colabfold.py  get_msa_jackhmmer.py  jackhmmer.py
fast_ensemble/: fast_ensemble_init.py  jackhmmer_msa.py  mmseqs2_msa.py  pca_clustering.py  predict_ensemble.py  rmsd_mode1d.py  rmsd_mode2d.py  rmsf_plddt.py  save_traj.py  tmscore_mode1d.py  tmscore_mode2d.py
fast_ensemble/ensemble_analysis/: analysis_utils.py  pca.py  rmsd.py  rmsf.py  tmscore.py  traj.py  twodrmsd.py  twotmscore.py
fast_ensemble/gui/: analysis_config.py  build_msa.py  dock_widget.py  icons.py  job_manager.py  make_predictions.py  plot_widget.py  run_gui.py  widget_base.py
fast_ensemble/msa_generation/: get_msa_jackhmmer.py  jackhmmer.py  pairmsa.py
gui/: build_msa.py  directory_selector.py  dock_widget.py  gui.py  icons.py  make_predictions.py  run_gui.py
scripts/: fast_ensemble_init.sh  install_colabfold.sh  install_hmmer_aptget.sh  install_tmscore.sh  jackhmmer_msa.sh  mmseqs2_msa.sh  openfold_environment.yml  pca_clustering.sh  pip_dependencies.sh  predict_ensemble.sh  rmsd_mode1d.sh  rmsd_mode2d.sh  rmsf_plddt.sh  run_gui.sh  save_traj.sh  tmscore_mode1d.sh  tmscore_mode2d.sh  todo_dependencies.sh
source/: conf.py  index.rst
(+633 files in other folders)
