[tool.poetry]
name = "fast_ensemble"
version = "0.1.1"
description = "placeholder"
authors = [
    "Gabriel Monteiro da Silva <gabriel.monteiro233@gmail.com>",
]
readme = "README.md"
license = "MIT, but separate licenses for the trained weights"
repository = "https://github.com/GMdSilva/FastEnsemble"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
absl-py = "^1.0.0"
jax = { version = "^0.4.20", optional = true }
matplotlib = "^3.2.2"
tensorflow-macos = { version = "<2.14.0", markers = "sys_platform == 'darwin'" }
tensorflow-cpu = { version = "^2.12.1", markers = "sys_platform != 'darwin'" }
biopython = "<1.83"
numpy = "^1.22.0"
pandas = "^1.3.4"
alphafold-colabfold = { version = "v2.3.6", optional = true }
#alphafold-colabfold = { path = "../alphafold", develop = true, optional = true }
requests = "^2.26.0"
tqdm = "^4.62.2"
appdirs = "^1.4.4"
py3Dmol = "^2.0.1"
dm-haiku = "^0.0.12"
importlib-metadata = "^4.8.2"

[tool.poetry.dev-dependencies]
# The latest version conflicts with tensorflow over typing-extensions
black = "^23.1.0"
jupyter = "^1.0.0"
pytest = "^6.2.5"

[tool.poetry.extras]
decaf_e_dev = ["decaf_e_dev"]

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.poetry.scripts]
fe_init = 'fast_ensemble.fast_ensemble_init:CLI'
mmseqs2_msa = 'fast_ensemble.mmseqs2_msa:CLI'
jackhmmer_msa = 'fast_ensemble.jackhmmer_msa:CLI'
predict_ensemble = 'fast_ensemble.predict_ensemble:CLI'
rmsd_mode1d = 'fast_ensemble.rmsd_mode1d:CLI'
rmsd_mode2d = 'fast_ensemble.rmsd_mode2d:CLI'
tmscore_mode2d = 'fast_ensemble.tmscore_mode2d:CLI'
tmscore_mode1d = 'fast_ensemble.tmscore_mode1d:CLI'
pca_clustering = 'fast_ensemble.pca_clustering:CLI'
rmsf_plddt = 'fast_ensemble.rmsf_plddt:CLI'
save_traj = 'fast_ensemble.save_traj:CLI'

[tool.black]
# Format only the new package, don't touch the existing stuff
include = '''
/(
  | fast_ensemble
)/
'''
# The colabfold.py exclude doesn't work, but the "fmt: off" inside of it does
extend-exclude = '''
/(
  | __pycache__
  | fast_ensemble/fast_ensemble.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"